--- a/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
@@ -25,7 +25,13 @@
             First Name
         </th>
         <th>
+            Middle Name
+        </th>
+        <th>
             Last Name
+        </th>
+        <th>
+            Contact No
         </th>
         <th>
             Age
@@ -42,7 +48,13 @@
             @Html.DisplayFor(modelItem => item.FirstName)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.MiddleName)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.LastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ContactNo)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Age)
@@ -51,18 +63,18 @@
             @Html.DisplayFor(modelItem => item.Gender)
         </td>
         <td>
-            <button class="btn btn-link">
+            <div class="btn btn-link">
                  <span class="glyphicon glyphicon-pencil"></span>
                  @Html.ActionLink("Edit", "Edit", new { id=item.Id })
-            </button>
-            <button class="btn btn-link">
+            </div>
+            <div class="btn btn-link">
                 <span class="glyphicon glyphicon-question-sign"></span>
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) 
-            </button>
-            <button class="btn btn-link">
+            </div>
+            <div class="btn btn-link">
                 <span class="glyphicon glyphicon-trash"></span>
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </button>
+            </div>
 </td>
     </tr>
 }
