--- a/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
@@ -6,11 +6,11 @@
 }
 
 <h2> </h2>
-        <header class=" row content-header">
-            <div class=" col-md-6">
+        <header class="row content-header">
+            <div class="col-md-6">
                 <h2>Users</h2>
             </div>
-            <div class=" col-md-6 content-action">
+            <div class="col-md-6 content-action text-right">
                              
                  <a href="@Url.Action("Create")" class="btn btn-info">
                     <span class="glyphicon glyphicon-plus-sign"></span>
@@ -36,6 +36,9 @@
         </th>
         <th>
             Employment Date
+        </th>
+        <th>
+            Action Buttons
         </th>
     </tr>
 
