--- a/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
@@ -38,6 +38,9 @@
             Employment Date
         </th>
         <th>
+            School Attended
+        </th>
+        <th>
             Action Buttons
         </th>
     </tr>
