--- a/src/WebApplication1/Areas/Security/Views/Users/Details.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Details.cshtml
@@ -58,5 +58,12 @@
             @Html.DisplayFor(model => model.Gender)
         </dd>
 
+        <dt>
+            Employment Date
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.EmploymentDate)
+        </dd>
+
     </dl>
 </div>
