--- a/src/WebApplication1/Areas/Security/Views/Users/Create.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Create.cshtml
@@ -81,8 +81,15 @@
                     </div>
                 </div>
 
-</div>
-           
+                <div class="form-group">
+                    @Html.LabelFor(model => model.EmploymentDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.EmploymentDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.EmploymentDate, "", new { @class = "text-danger" })
+                    </div>
+
+                </div>
+           </div>
 }
 
 
