--- a/src/WebApplication1/Areas/Security/Views/Users/Delete.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Delete.cshtml
@@ -54,6 +54,9 @@
         <dd>
             @Html.DisplayFor(model => model.Gender)
         </dd>
+        <dd>
+            @Html.DisplayFor(model => model.EmploymentDate)
+        </dd>
 
     </dl>
 
