--- a/src/WebApplication1/Areas/Security/Views/Users/Edit.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Edit.cshtml
@@ -22,7 +22,7 @@
                     Cancel
                 </a>
 
-                <button type=" submit" value="Save" class="btn btn-success">
+                <button type="submit" value="Save" class="btn btn-success">
                     <span class="glyphicon glyphicon-thumbs-up"></span>
                     Save
                 </button>
@@ -63,6 +63,14 @@
                 @Html.RadioButtonFor(model => model.Gender, "Male", false) Male
                 @Html.RadioButtonFor(model => model.Gender, "Female", false) Female
                 @Html.RadioButtonFor(model => model.Gender, "Other", false) Other
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.EmploymentDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.EmploymentDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.EmploymentDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
