--- a/src/WebApplication1/Areas/Security/Views/Users/Create.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Create.cshtml
@@ -11,28 +11,36 @@
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <header class=" row content-header">
-            <div class=" col-md-6">
+        <header class="row content-header">
+            <div class="col-md-6">
                 <h2>Create User</h2>
             </div>
-            <div class=" col-md-6 content-action">
-               
-                <a href="@Url.Action("Index")" class="btn btn-link">
-                    <span class="glyphicon glyphicon-thumbs-down"></span>
-                    Cancel
-                </a>
+               <div class="col-md-6 content-action text-right">
 
-                <button type="submit" value="Save" class="btn btn-success">
-                <span class="glyphicon glyphicon-thumbs-up"></span>
-                    Save
-                </button>
-            </div>
+        <a href="@Url.Action("Index")" class="btn btn-link">
+            <span class="glyphicon glyphicon-thumbs-down"></span>
+            Cancel
+        </a>
+
+        <button type="submit" value="Save" class="btn btn-success">
+            <span class="glyphicon glyphicon-thumbs-up"></span>
+            Save
+        </button>
+    </div>
         </header>
       </div>
        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+        </div>
+    </div>
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -40,29 +48,16 @@
                 @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.MiddleName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MiddleName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MiddleName, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.RadioButtonFor(model => model.Gender, "Male", false) Male
+            @Html.RadioButtonFor(model => model.Gender, "Female", false) Female
+            @Html.RadioButtonFor(model => model.Gender, "Other", false) Other
         </div>
+    </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-                </div>
-            </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.ContactNo, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ContactNo, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ContactNo , "", new { @class = "text-danger" })
-                </div>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.Age, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -72,14 +67,7 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.RadioButtonFor(model => model.Gender, "Male", false) Male
-                        @Html.RadioButtonFor(model => model.Gender, "Female", false) Female
-                        @Html.RadioButtonFor(model => model.Gender, "Other", false) Other
-                    </div>
-                </div>
+                
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.EmploymentDate, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -89,7 +77,7 @@
                     </div>
 
                 </div>
-           </div>
+           
 }
 
 
