MAY SCHOOL NA BES!

--- a/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
@@ -57,6 +57,9 @@
             @Html.DisplayFor(modelItem => item.EmploymentDate)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.Schools)
+        </td>
+        <td>
             <div class="btn btn-link">
                  <span class="glyphicon glyphicon-pencil"></span>
                  @Html.ActionLink("Edit", "Edit", new { id=item.Id })
