--- a/src/WebApplication1/Content/Site.css
+++ b/src/WebApplication1/Content/Site.css
@@ -149,10 +149,10 @@ th, td {
     padding: 8px;
 }
 
-tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(odd){background-color: #f2f2f2}
 
 th {
-    background-color: #4CAF50;
+    background-color: rgba(69, 238, 238, 0.16);
     color: white;
 }
 
