WALA PANG YEARATTENDED

--- a/src/WebApplication1/Areas/Security/Views/Users/Create.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Create.cshtml
@@ -73,8 +73,24 @@
                         @Html.EditorFor(model => model.EmploymentDate, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.EmploymentDate, "", new { @class = "text-danger" })
                     </div>
+                    </div>
 
-                </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.School, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.School, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.School, "", new { @class = "text-danger" })
+                        </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.YearAttended, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.YearAttended, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.YearAttended, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
            
 }
 
