--- a/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
+++ b/src/WebApplication1/Areas/Security/Views/Users/Index.cshtml
@@ -38,6 +38,9 @@
             Employment Date
         </th>
         <th>
+            Year Attended
+        </th>
+        <th>
             School Attended
         </th>
         <th>
@@ -61,6 +64,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.EmploymentDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.YearAttended)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Schools)
